App-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masktv-app-deployment
  labels: 
    app: masktv-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: masktv-app
  template:
    metadata:
      labels:
        app: masktv-app
    spec:
      containers:
        - name: masktv-app-container
          image: # Use the image that we build
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - name: masktv-app-pv
              mountPath: /var/www/html   # CHECK ONCE 
      imagePullSecrets: # if dockerhub registry is private
        - name: # Specify the image pull secret name if required
      volumes:
        - name: masktv-app-pv
          persistentVolumeClaim:
            claimName: masktv-app-pvc
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 2
      maxUnavailable: 2
