App.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masktv-app-deployment
  labels: 
    app: masktv-app
spec:
  template:
    metadata:
      labels:
        app: masktv-app
    spec:
      containers:
        - name: masktv-app-container
          image: # Use the image that we build 
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 100m
          volumeMounts:
            - name: app-pv
              mountPath: /var/lib/mysql   # CHECK ONCE 
      volumes:
        - name: masktv-volume
          persistentVolumeClaim:
            claimName: masktv-db-pv
    replicas: 5
    selector:
      matchLabels:
        app: masktv-app
    strategy: 
      type: RollingUpdate
      rollingUpdate: 
        maxSurge: 2
        maxUnavailable: 2
