DB-Statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: masktv-mysql-statefulset
  labels:
    app: masktv-mysql
spec:
  serviceName: "masktv-mysql-service"
  replicas: 5
  selector:
    matchLabels:
      app: masktv-mysql
  template:
    metadata:
      labels:
        app: masktv-mysql
    spec:
      containers:
      - name:  masktv-mysql-statefulset
        image: .....................
        ports:
          - containerPort: 3306
            name: mysql
            protocol: TCP
        resources: 
          requests: 
            cpu: 200m
            memory: 100Mi
        volumeMounts:
        - name: masktv-mysql-pv
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: masktv-mysql-pv
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
