DB-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: masktv-mysql-statefulset
  labels:
    app: masktv-mysql
spec:
  serviceName: "masktv-mysql-service"
  replicas: 2
  selector:
    matchLabels:
      app: masktv-mysql
  template:
    metadata:
      labels:
        app: masktv-mysql
    spec:
      containers:
        - name: masktv-mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: masktv-mysql-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: masktv-mysql-pv
          persistentVolumeClaim:
            claimName: masktv-mysql-pvc
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0  # State can be managed by partitioning
