DB.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masktv-mysql-deployment
  labels:
    app: masktv-mysql
spec:
  replicas: 5
  selector:
    matchLabels:
      app: masktv-mysql
  template:
    metadata:
      labels:
        app: masktv-mysql
    spec:
      containers:
        - name: masktv-mysql-container
          image: # Replace with your MySQL image
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - name: masktv-db-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: masktv-db-pv
          persistentVolumeClaim:
            claimName: masktv-db-pvc
      strategy:
        type: RollingUpdate
        rollingUpdate:
          maxSurge: 2
          maxUnavailable: 2
