app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masktv-app-deployment
  labels: 
    app: masktv-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: masktv-app
  template:
    metadata:
      labels:
        app: masktv-app
    spec:
      containers:
        - name: masktv-app-container
          image: 
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - name: masktv-app-pv
              mountPath: /var/www/html 
            - name: app-log-pv
              mountPath: /var/log/apache2
      imagePullSecrets: # if dockerhub registry is private
        - name: # Specify the image pull secret name if required
        # volume for public html pv
      volumes:
        - name: masktv-app-pv
          persistentVolumeClaim:
            claimName: masktv-app-pvc
        # volume for log pv
        - name: app-log-pv
          persistentVolumeClaim: 
            claimName: app-log-pvc
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 2
      maxUnavailable: 2
