download-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: download-deployment
  labels:
    app: download
spec:
  replicas: 1
  selector:
    matchLabels:
      app: download
  template:
    metadata:
      labels:
        app: download
    spec:
      containers:
        - name: download-container
          image: masktv/masktv:app  # Replace with your actual image
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: masktv-app-pv
              mountPath: /var/www/html  # Mount the persistent volume to serve the files
      volumes:
        - name: masktv-app-pv
          persistentVolumeClaim:
            claimName: masktv-app-pvc  # PVC for storing the extracted files
