php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masktv-phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: masktv-phpmyadmin-container
          image: phpmyadmin:latest
          ports:
            - containerPort: 8080
