DB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masktv-mysql-service
  labels:
    app: masktv-mysql
spec:
  ports:
    - port: 3306
      targetPort: mysql
  clusterIP: None  # Headless service
  selector:
    app: masktv-mysql
