DB.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masktv-mysql-service
spec:
  selector:
    app: masktv-mysql       # labell must be match with pod label of masktv deployment.
  ports:
    - protocol: TCP
      port: 3306     # Port on which MySQL listens inside the container
