php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masktv-phpmyadmin-service
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
