ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masktv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: masktv-app-service
      port:
        number: 80
        
  rules:
    - host: masktvott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80

    - host: web.masktvott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80
                  
    - host: admin.masktvott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80
