ingresss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masktv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: mginx
  defaultBackend:
    service:
      name: masktv-app-service
      port:
        number: 80
        
  rules:
    - host: subdomain.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80

    - host: subdomain.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80
                  
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masktv-app-service
                port:
                  number: 80
